# workshop_estrutura_do_zero

./: README.md  index.html  mkdocs.yml  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md
site/: 404.html
tests/: test_pipeline.py
