[project]
name = "workshop-estrutura-do-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "lucasftorres",email = "lucaas.torresf192@gmail.com"}
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.5"
faker = "^19.6.2"
pandas = "^2.1.1"
pytest = "^7.4.2"
openpyxl = "^3.1.2"
isort = "^5.12.0"
pre-commit = "^3.4.0"
black = "^23.9.1"
mkdocstrings = "^0.23.0"
pip-audit = "^2.6.1"
taskipy = "^1.12.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
known_third_party = []

[tool.taskipy.tasks]
format = 'isort . && blue .'
test = 'poetry run pytest -v'
kill = 'kill -9 ${lsof -t -i :8000}'